# Drone-Pursuing

./: .gitignore  .gitmodules  README.md  atom.deb.REMOVED.git-id  requirements.txt
data/: camera_matrix.txt
data/drone_dataset_detectron/: README.dataset.txt  README.roboflow.txt
data/drone_dataset_detectron/model/: frame_kp_vertices.pt.REMOVED.git-id  model_final.pth.REMOVED.git-id
data/drone_dataset_detectron/test/: _annotations.coco.json
data/drone_dataset_detectron/train/: _annotations.coco.json
data/drone_dataset_detectron/valid/: _annotations.coco.json
data/keypoints/: val_annotations.json
data/keypoints/dataset/: train_annotations.json
data/keypoints/point/: key_points.csv
data/keypoints_refine/point/: key_points.csv  key_points_updated.csv
data/move_to_ref_point/move2ref_point_mpc/: drone_data.csv
data/move_to_ref_point/move2ref_point_mpc_aggresive/: drone_data.csv
data/move_to_ref_point/move2ref_point_pid/: drone_data.csv
data/move_to_ref_point/move2ref_point_pid_aggresive/: drone_data.csv
data/mpc_delay/: state_data_x_1.csv  state_data_x_10.csv  state_data_x_2.csv  state_data_x_3.csv  state_data_x_4.csv  state_data_x_5.csv  state_data_x_6.csv  state_data_x_7.csv  state_data_x_8.csv  state_data_x_9.csv  state_data_y_1.csv  state_data_y_10.csv  state_data_y_2.csv  state_data_y_3.csv  state_data_y_4.csv  state_data_y_5.csv  state_data_y_6.csv  state_data_y_7.csv  state_data_y_8.csv  state_data_y_9.csv  state_data_z_1.csv  state_data_z_10.csv  state_data_z_2.csv  state_data_z_3.csv  state_data_z_4.csv  state_data_z_5.csv  state_data_z_6.csv  state_data_z_7.csv  state_data_z_8.csv  state_data_z_9.csv
data/mpc_delay/result/: mpc_time_delay_average_x.csv  mpc_time_delay_average_y.csv  mpc_time_delay_average_z.csv  mpc_time_delay_x.csv  mpc_time_delay_y.csv  mpc_time_delay_z.csv
data/real_drone_state_function/dataset/: state_data_1.csv  state_data_2.csv  state_data_3.csv  state_data_4.csv
data/real_drone_state_function/in_time_fourier_filter/: state_data_1.csv  state_data_2.csv  state_data_3.csv  state_data_4.csv
data/real_drone_state_function/in_time_fourier_filter_raw/: state_data_1.csv  state_data_2.csv  state_data_3.csv  state_data_4.csv
data/real_drone_state_function/raw_data02/: state_data_1.csv  state_data_2.csv  state_data_3.csv  state_data_4.csv
data/real_drone_state_function/smoothed_data01/: smoothed_x_position.csv  smoothed_x_speed.csv  smoothed_y_position.csv  smoothed_y_speed.csv  smoothed_yaw_position.csv  smoothed_yaw_speed.csv  smoothed_z_position.csv  smoothed_z_speed.csv
data/real_drone_state_function/smoothed_data02/: smoothed_x_position.csv  smoothed_x_speed.csv  smoothed_x_state.csv  smoothed_y_position.csv  smoothed_y_speed.csv  (+7 more)
data/tracking_parrot_yolo/: drone_data.csv
data/tracking_parrot_yolo_speed_prediction/: drone_data.csv  drone_state_yolo_vicon_comparison.csv
data/tracking_parrot_yolo_test/: drone_data.csv  drone_data_print.csv  drone_data_yolo_detectron_comparison.csv  drone_data_yolo_detectron_comparison_moving.csv  noise_bias_yolo_detectron.csv  rotation_matrix.csv  transformation_matrix.csv  yaw_rotation_matrix.csv
data/training_model/: frame_kp_vertices.pt.REMOVED.git-id  model_final.pth.REMOVED.git-id
output/drone_keypoints/: events.out.tfevents.1734220385.yousa-Vector-17-HX-A13VHG.1525962.0  events.out.tfevents.1734220705.yousa-Vector-17-HX-A13VHG.1529366.0  instances_predictions.pth  metrics.json  model_final.pth.REMOVED.git-id
src/anafi_msg/: CMakeLists.txt  package.xml
src/anafi_msg/msg/: Bbox.msg  DetectronBox.msg  DroneVehiclePos.msg  JackalState.msg  KpData.msg  PnPData.msg
src/anafi_test/: package.xml  setup.cfg  setup.py
src/drop_ball/: package.xml  setup.cfg  setup.py
src/sphinx_simulation/: package.xml  setup.cfg  setup.py
src/track_apriltag/: CMakeLists.txt  package.xml
src/track_apriltag/src/: check_opencv_version.cpp  generate_aruco.cpp  get_3Dpose.cpp  get_apriltag.cpp
src/tracking_parrot/: package.xml  setup.cfg  setup.py
(+1581 files in other folders)
